Bug 513701 - Cannot paste LibreOffice Calc cell content that was made the top clipboard item by clicking it in the Clipboard widget/popup
Summary: Cannot paste LibreOffice Calc cell content that was made the top clipboard it...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Clipboard widget & pop-up (other bugs)
Version First Reported In: 6.5.4
Platform: Arch Linux Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-22 14:24 UTC by qlum
Modified: 2026-02-04 11:04 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qlum 2025-12-22 14:24:05 UTC
SUMMARY
When trying to copy / pasting cells in LibreOffice you can normally when copying paste them in text, for example in krunner or wl-paste and this works as expected.
However, when you try the same from clipboard history it will paste an empty string. The text is however still shown in the preview and while editing the entry. 
This is something I regularly use, to copy / paste data between sheets and other places. Like forms / comment boxes on websites or krunner. Noticed this issue for a while but never knew what and when this broke.

As a sidenote:
If you paste it from clipboard history in LibreOffice it will paste as an image from clipboard history where it normally pastes as a cell. (just noticed in testing, otherwise unimportant)


STEPS TO REPRODUCE
1. create a new spreadsheet in LibreOffice
2. write something in 2 different cells
3. copy the first cell
4. copy the second cell
5. select the content of the first cell from clipboard history
6. paste the content in krunner

OBSERVED RESULT
Nothing gets pasted

EXPECTED RESULT
the content of the first cell gets pasted

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1

ADDITIONAL INFORMATION
It may be related to the following merge request but could be wrong (found it in some other bug):
https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5315
Comment 1 TraceyC 2025-12-29 21:59:18 UTC
I can reproduce this on Plasma built from git-master
Comment 2 Nate Graham 2026-01-05 19:54:49 UTC
I can reproduce it too.
Comment 3 Bug Janitor Service 2026-01-25 22:10:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kguiaddons/-/merge_requests/204
Comment 4 equeim 2026-01-27 16:43:31 UTC
Git commit 5c9fbce217438675c270ab2eda8aca4d06e88eea by Alexey Rochev.
Committed on 25/01/2026 at 22:05.
Pushed by davidedmundson into branch 'master'.

WaylandClipboard: fix pasting text when QMimeData also has an image

M  +11   -13   src/systemclipboard/waylandclipboard.cpp

https://invent.kde.org/frameworks/kguiaddons/-/commit/5c9fbce217438675c270ab2eda8aca4d06e88eea