WaylandClipboard: fix pasting text when QMimeData also has an image

BUG: 513701